@@ -146,6 +146,10 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
     entirely and require users to pass function handles rather than
     function names.
 
+ ** The path handling functions no longer perform variable or brace
+    expansion on path elements and Octave's load-path is no longer
+    subject to these expansions.
+
  ** New functions added in 5.0:
 
       clearvars
